finally fixed scrolling on mobile
ended up scratching the idea and making the top bar opaque that way I could actually format the scrolling on mobile in a way that feels and looks good

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     background-color: #333;
     opacity: 0.93;
     color: white;
-    padding: 3px 20px; /* Default padding for desktop */
+    padding: 3px 20px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -119,7 +119,6 @@ body {
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
-/* Navigation Links - Desktop Styling */
 .nav-links {
     flex-grow: 1;
 }
@@ -177,7 +176,14 @@ body {
 
 .page-content.active {
     display: block;
-    padding-top: 55px
+    position: fixed;
+    width: 100%;
+    top: 55px;
+    bottom: 0px;
+    right: 0;
+    flex-direction: column;
+    text-align: center;
+    overflow-y: auto;
 }
 
 .memes-container {
@@ -252,26 +258,25 @@ body {
     }
 
     .top-bar {
+        opacity: 1;
         height: 55px;
         padding: 3px 20px;
-        padding-top: calc(3px + env(safe-area-inset-top));
     }
 
     .bottom-bar {
         display: flex;
-        padding-bottom: calc(3px + env(safe-area-inset-bottom));
     }
 
     .nav-links {
-    display: none;
-    position: fixed;
-    width: 100%;
-    top: 53px;
-    bottom: 55px;
-    right: 0;
-    flex-direction: column;
-    text-align: center;
-    overflow-y: auto;
+        display: none;
+        position: fixed;
+        width: 100%;
+        top: 53px;
+        bottom: 55px;
+        right: 0;
+        flex-direction: column;
+        text-align: center;
+        overflow-y: auto;
     }
 
     .nav-links.active {
@@ -303,13 +308,13 @@ body {
     }
 
     .nav-links ul li a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    height: max(55px, calc((100vh - 118px) / 8));
-    padding: 0 15px;
-}
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        height: max(55px, calc((100vh - 118px) / 8));
+        padding: 0 15px;
+    }
 
     /* Burger animation when active */
     .burger-menu.active span:nth-child(1) {
@@ -328,20 +333,24 @@ body {
     }
 
     .memes, .apps {
-    width: calc(50vw - 25px);
-    height: auto;
+        width: calc(50vw - 25px);
+        height: auto;
+    }
+
+    .memes-container {
+    padding-bottom: 75px;
     }
 
     .memes-container a:hover {
-    filter: none;
+        filter: none;
     }
 }
 
 @media (max-width: 1023px) and (orientation: landscape) {
-  .memes {
-    width: calc(33vw - 18px);
+    .memes {
+        width: calc(33vw - 18px);
     }
-  .apps {
+    .apps {
       width: calc(25vw - 18px);
-  }
+    }
 }
